# llms

./: .gitignore  README.md
docs/ai/llm_old/: LangChain.md  LangExtract.ipynb  LiteLLMVSOpenAPIGenerator.md  ModelFineTuning.ipynb  Nebula.md  OpenWebUI.md  Overview.md  Pydantic.ipynb  README.md
docs/ai/python/: 打包 & 发布.md  环境 & 工具.md
docs/containers/: .gitignore  01_Docker.md  02_Podman.md  03_DockerCompose.md  README.md
docs/containers/demo/: openhands_compose.yml
docs/containers/examples/01_Dockerfile/java/: Dockerfile  Dockerfile.tomcat
docs/containers/examples/02_DockerCompose/01_UseImage/: docker-compose.yml
docs/containers/examples/02_DockerCompose/02_VolumesConfig/: docker-compose.yml
docs/containers/examples/02_DockerCompose/03_RestartPolicy/: docker-compose.yml
docs/proxies/: 01_Nginx.md  02_Haproxy.md  04_Whistle.md  README.md
notebooks/: DSPy.ipynb  Ollama.ipynb  Reranks.ipynb  Transformers.ipynb  mcp_demo.py  pydantic_ai_demo.py
patterns/langchain_pyright/: langchain_call_llm.py  pyproject.toml  pyrightconfig.json  ruff.toml
patterns/langextract/: .gitignore  main.py  pyproject.toml
patterns/rag/: README.md  main.py  pyproject.toml
providers/: README.md
providers/genai/: 01.content_gen.py  02.chat_conversation.py  03.multimodal.py  04.streaming.py  README.md  pyproject.toml
providers/langchain/: langchain_call_llm.py  langchain_tool.py  pyproject.toml
providers/litellm/: 01.content_gen.py  pyproject.toml
providers/openai/: 01.content_gen.py  02.multimodal.py  03.tool.py  pyproject.toml
(+24 files in other folders)
