[project]
name = "lab-langextract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "json-repair>=0.52.3",
    "langextract[openai]",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]

[tool.uv.sources]
langextract = { git = "https://github.com/google/langextract", rev = "main" }
